--- a/content/blog/thoughts/나의 반려동물에 대하여.md
+++ b/content/blog/thoughts/나의 반려동물에 대하여.md
@@ -19,7 +19,7 @@ draft: false
 
 강아지를 가족으로 맞은 뒤부터는 온 가족이 함께하기로 했지만, 첫 만남은 오롯이 내 담당이었다. (이 덕에 내가 주 보호자가 되었다) 나는 소위 말하는 강아지 분양숍에서는 아이를 데려오고 싶지 않았고, 가족을 잃은 강아지나 가족을 잃기 직전인 강아지를 품고 싶었다. 그래서 종일 포인핸드 앱과 유기 동물 카페를 들락날락했었다. 그러던 중, 5개월령 강아지를 분양 보낸다는 글을 보게 되었다. 말이 분양이지, 파양을 잘 포장한 것이었다. 딱 한 장 있는 사진을 보자마자 마음이 홀린 것같이 쏠렸다.
 
-![땅콩이 분양 글](./images/peanut_1.png)
+![땅콩이 분양 글](./images/peanut_1.jpg)
 
 간단하게 쪽지로 이야기를 나눴다. 전 주인은 내 나이, 직업, 가족 구성원 정도를 물었고, 언제 아이를 데리러 올 수 있냐고 물었다. 위치는 인천이었고, 나는 강아지를 데려오기 전에 무엇을 물어야 하는지도 모른 채 그저 빨리 가겠다고만 했다. (당장 오지 않으면 다른 사람에게 줄 것인 양 빨리 오라고도 했다) 급하게 아빠를 불러서 차를 타고 출발했고, 그렇게 연락한 지 세 시간 만에 우리 가족의 첫 강아지를 만날 수 있었다. 전 주인은 내게 강아지가 들은 가방을 건네 주면서 궁금한 점이 있으면 연락 달라고 했고, 우리가 집으로 돌아가는 사이에 카페를 탈퇴했다. 바보같이 번호도 묻지 않은 나는 연락할 방도가 없어졌지만 강아지 보낸 전 견주의 마음이 싱숭생숭해 그랬겠거늘, 별일 없겠거늘 했다.
 
