--- a/content/blog/thoughts/나의 반려동물에 대하여.md
+++ b/content/blog/thoughts/나의 반려동물에 대하여.md
@@ -51,7 +51,7 @@ draft: false
 
 강아지가 집에 있다는 건 삶을 송두리째 바꿔 놓았다 해도 과언이 아니다. 요즈음 집에 들어갈 때 와다다 달려와서 꼬리 흔들다 몸까지 흔들고 있는 땅콩이 보면 맨날 하는 이야기. 누나는 너만 있으면 된다. 누나는 너 보고 산다. 감정의 골이 깊어질 때나 육체적, 정신적인 한계에 달하면 불필요한 우울까지 씹던 나는 퇴근하고 침대에 누워서 슬픈 음악을 틀어 놓고 우울한 시간에 뒤덮여 있던 때가 많았다. 적정량의 우울은 있어서 해 될 게 없다. 마음을 더 자세히 들여다볼 수 있는 계기가 되기도 한다. 자신을 나락으로 빠뜨리는 것 같은 때가 문제일 뿐이지. 이때마다 생각을 버리고 싶었는데, 내 강아지는 그 역할을 톡톡히 해 주고 있다. 불필요한 우울을 씹을 새가 없다. 목적 없는 사랑을 주는 땅콩이를 보고 있으면 발끝부터 목끝까지 사랑으로 차오르는 것 같다. 
 
-또 하나의 큰 변화는 가족이다. 온 가족이 말썽쟁이 막내를 보고 행복을 찾고, 그 행복을 나눌 시간이 생겼다. 그 행복을 나누기 위해서 더 대화하게 된다. 특히 우리 아빠의 변화가 컸다. 아빠는 자꾸 했던 이야기를 또 하는 걸 좋아하는데, 요즈음 최고 빈도를 자랑하는 말은 `땅콩이가 꼭 나랑 자려고 하네`이다. 땅콩이는 자는 곳이 고정적이지 않고, 잠들기 전에 가족 구성원 방을 한 번씩 가 본 뒤 그날 기분에 따라 골라 잔다. 아빠는 건강상의 이유로 퇴직 후 종종 일감을 받아서 출장을 다녀오곤 하는데, 아빠가 집에 있을 때에는 꼭 땅콩이가 아빠 발밑에서만 잔다. 그럼 나랑 내 동생은 그 모습을 찍어서 가족 단체 채팅방에 올린다. 그리고 엄마가 웃으면서 집 좀 치우라고 한다. 이렇게 바뀐 우리 가족이 좋다.
+또 하나의 큰 변화는 가족이다. 온 가족이 말썽쟁이 막내를 보고 행복을 찾고, 그 행복을 나눌 시간이 생겼다. 그 행복을 나누기 위해서 더 대화하게 된다. 특히 우리 아빠의 변화가 컸다. 아빠는 자꾸 했던 이야기를 또 하는 걸 좋아하는데, 요즈음 최고 빈도를 자랑하는 말은 `땅콩이가 꼭 나랑 자려고 하네`이다. 땅콩이는 자는 곳이 고정적이지 않고, 잠들기 전에 가족 구성원 방을 한 번씩 가 본 뒤 그날 기분에 따라 골라 잔다. 아빠는 건강상의 이유로 퇴직 후 종종 일감을 받아서 출장을 다녀오곤 하는데, 아빠가 집에 있을 때에는 꼭 땅콩이가 아빠 머리맡에서만 잔다. 그럼 나랑 내 동생은 그 모습을 찍어서 가족 단체 채팅방에 올린다. 그리고 엄마가 웃으면서 집 좀 치우라고 한다. 이렇게 바뀐 우리 가족이 좋다.
 
 ![역시 쿨쿨은 아빠 곁이지](./images/peanut_4.jpg)
 
