--- a/content/blog/thoughts/2021-mar.md
+++ b/content/blog/thoughts/2021-mar.md
@@ -15,26 +15,20 @@ draft: false
 
 이미 지나간 것들 중 놓친 것들이 너무 많은 것 같다. 자연의 아름다움조차 가슴 깊이 느껴 본 적이 없었다. 물 흐르는 것을 보고 있으면 생각이 없어져서 좋았지, 물결을 통해 생각을 하지는 않았으니까. 나는 이제 생각하기 위해 산책을 나간다. 하루는 길가에 핀 꽃이 꼭 폭죽 같아서 축하할 일이 없는데도 축하받는 기분이었고, 둥둥 떠다니는 오리를 보면서 물 밑으로는 발길질 열심일지, 나처럼 버둥대고 있을지를 궁금해했다. 한강을 바라보기만 하며 앉아 있는 노인은 무슨 생각을 할지 궁금해했다. 물 바로 앞에서 소주를 마시던 노인은 다음날에도 같은 자리에 있을지 궁금해했다. 자리에 없기를 바랐다. 이제라도 놓치고 싶지 않은 감정들을 글로도 기록한다. 표현하기 어려운 감정들을 글로 적다 보면 산문도, 운문도 아닌 모호한 것이 나오는데, 이런 식으로 적어 놓는 것도 꽤 재미있다. 글로 재미를 많이 보는 요즈음이다.
 
-```
-<들풀을 보았다 한다면>
-너는 꽃을 좋아한다. 내게 봄꽃이 피었다 그랬다. 꽃을 보고 싶었다. 낮산책 갔다. 한강 따라 걸었다. 가지가 앙상했다. 들풀만 보였다. 들풀을 보았다 한다면. 그것까지도 읽어 줄까. 너는 꽃을 좋아하는데. 나는 물을 좋아하는데. 말하고 싶었다. 물을 껴안고 태어났다고. 가까이 걷고 싶었다고. 물결이 몇 갠가 세고 싶었다고. 발을 적실 만큼 가까이 갔다. 오리 한 쌍 물결 이는 대로 둥둥. 떠다닌다. 움직이지 않고도 움직이는 것. 그게 나는 조금 부러운가. 자꾸자꾸 부러운가. 물 밑으로 발길질 열심일까. 물 그림자 아래로도 발가락 하나 안 보이고. 더 가까이 가도 보이지 않았고. 하늘은 흐렸다. 하늘이 흐렸다. 말하고 싶었다. 흐리고 푸른 빛이 도화지 가득 채워 놓았다고. 도화지 귀퉁이를 접었다고. 접힌 자국에 겨우내 만개한 매화를 보았다고. 사진을 찍었다. 송신한다. 그러면 너는. 집 앞에 앵두나무가 있는 너는. 열매와 닮은 꽃잎으로 화답한다. 나는 앵두꽃을 좋아한다. 내게 봄꽃이 피었다. 그랬다.
-```
+> <들풀을 보았다 한다면>
+> 너는 꽃을 좋아한다. 내게 봄꽃이 피었다 그랬다. 꽃을 보고 싶었다. 낮산책 갔다. 한강 따라 걸었다. 가지가 앙상했다. 들풀만 보였다. 들풀을 보았다 한다면. 그것까지도 읽어 줄까. 너는 꽃을 좋아하는데. 나는 물을 좋아하는데. 말하고 싶었다. 물을 껴안고 태어났다고. 가까이 걷고 싶었다고. 물결이 몇 갠가 세고 싶었다고. 발을 적실 만큼 가까이 갔다. 오리 한 쌍 물결 이는 대로 둥둥. 떠다닌다. 움직이지 않고도 움직이는 것. 그게 나는 조금 부러운가. 자꾸자꾸 부러운가. 물 밑으로 발길질 열심일까. 물 그림자 아래로도 발가락 하나 안 보이고. 더 가까이 가도 보이지 않았고. 하늘은 흐렸다. 하늘이 흐렸다. 말하고 싶었다. 흐리고 푸른 빛이 도화지 가득 채워 놓았다고. 도화지 귀퉁이를 접었다고. 접힌 자국에 겨우내 만개한 매화를 보았다고. 사진을 찍었다. 송신한다. 그러면 너는. 집 앞에 앵두나무가 있는 너는. 열매와 닮은 꽃잎으로 화답한다. 나는 앵두꽃을 좋아한다. 내게 봄꽃이 피었다. 그랬다.
 
-```
-<점심 한강>
-바람이 밀어 물결이 바쁘다. 작은 산봉오리들 무수하다. 물방울 모여 터지는 소리 보글보글 하고 난다. 얼기설기 짜 놓은 방직물 같다. 손으로 뜬다면 잡힐까.
-```
+> <점심 한강>
+> 바람이 밀어 물결이 바쁘다. 작은 산봉오리들 무수하다. 물방울 모여 터지는 소리 보글보글 하고 난다. 얼기설기 짜 놓은 방직물 같다. 손으로 뜬다면 잡힐까.
 
-```
-<체리 블라썸>
-이 분 뒤면 도착해. 엷게 붉은 양 뺨 보인다. 발갛게 피었다. 뭐가 그렇게 부끄러워. 대답은 없고 눈은 또 안 피해.
-
-한가한 낮이야. 보폭 좁힌다. 나 너 보러 왔는데. 눈앞에서 종종걸음 놓는다. 소란하다. 몇 명이나 너를 봤니. 바쁘게 보고 지나갔니.
-
-흰 피부에는 점 하나 안 났고. 상처도 없고. 흐드러진 살결 보드랍다. 웃는 얼굴 무구하다. 드러낸 마음을 누가 알아줬어. 나는 네 마음이 이렇게 흰 줄 몰랐는데. 또 대답 안 하지.
-
-너는 곱고 잘고 희고 연하고. 이런 말 몇 번이나 들었니. 요요한 연둣빛 배경 수놓았고. 바람 따라 팔락거린다. 속 벗기니 덜 빨간 볼. 사랑받은 태가 났다.
-```
+> <체리 블라썸>
+> 이 분 뒤면 도착해. 엷게 붉은 양 뺨 보인다. 발갛게 피었다. 뭐가 그렇게 부끄러워. 대답은 없고 눈은 또 안 피해.
+>
+> 한가한 낮이야. 보폭 좁힌다. 나 너 보러 왔는데. 눈앞에서 종종걸음 놓는다. 소란하다. 몇 명이나 너를 봤니. 바쁘게 보고 지나갔니.
+>
+> 흰 피부에는 점 하나 안 났고. 상처도 없고. 흐드러진 살결 보드랍다. 웃는 얼굴 무구하다. 드러낸 마음을 누가 알아줬어. 나는 네 마음이 이렇게 흰 줄 몰랐는데. 또 대답 안 하지.
+>
+> 너는 곱고 잘고 희고 연하고. 이런 말 몇 번이나 들었니. 요요한 연둣빛 배경 수놓았고. 바람 따라 팔락거린다. 속 벗기니 덜 빨간 볼. 사랑받은 태가 났다.
 
 ### 책
 
