--- a/content/blog/thoughts/2021-mar.md
+++ b/content/blog/thoughts/2021-mar.md
@@ -9,15 +9,9 @@ draft: false
 
 ### 산책
 
-산책을 정말 많이 다녔다. 그동안 해왔던 산책과는 사뭇 다르게.
+나는 늘 생각을 덜고 싶었다. 쥐고 있는 것들이 많아 그걸 다 놓고 싶다는 생각이 많았고, 생각을 하는 일이 괴로워서 아무 생각 안 하고 살고 싶었다. 산책을 간다는 것은 아무 생각 하지 않으며 걷는 일이었다. 올해는 무슨 바람이 불었는지 들풀 하나하나 놓치지 않으려 한다. 눈 열심히 굴리며 걷고 있다.
 
-나는 늘 생각을 덜고 싶었다. 쥐고 있는 것들이 많아 그걸 다 놓고 싶다는 생각이 많았고, 생각을 하는 일이 괴로워서 아무 생각 안 하고 살고 싶었다. 고로 산책을 간다는 것은 아무 생각 하지 않으며 걷는 일을 일컬었다. 올해는 무슨 바람이 불었는지 들풀 하나하나 놓치지 않으려 한다. 눈 열심히 굴리며 걷고 있다.
-
-이미 지나간 것들 중 놓친 것들이 너무 많은 것 같다. 자연의 아름다움조차 가슴 깊이 느껴 본 적이 없었다. 물 흐르는 것을 보고 있으면 생각이 없어져서 좋았지, 물결을 통해 생각을 하지는 않았으니까. 나는 이제 생각하기 위해 산책을 나간다. 하루는 길가에 핀 꽃이 꼭 폭죽 같아서 축하할 일이 없는데도 축하받는 기분이었고, 둥둥 떠다니는 오리를 보면서 물 밑으로는 발길질 열심일지, 나처럼 버둥대고 있을지를 궁금해했다. 한강을 바라보기만 하며 앉아 있는 노인은 무슨 생각을 할지 궁금해했다. 물 바로 앞에서 소주를 마시던 노인은 다음날에도 같은 자리에 있을지 궁금해했다. 자리에 없기를 바랐다. 이제라도 놓치고 싶지 않은 감정들을 글로도 기록한다. 표현하기 어려운 감정들을 글로 적다 보면 산문도, 운문도 아닌 모호한 것이 나오는데, 이런 식으로 적어 놓는 것도 꽤 재미있다. 글로 재미를 많이 보는 요즈음이다.
-
-> 바람이 밀어 물결이 바쁘다. 작은 산봉오리들 무수하다. 물방울 모여 터지는 소리 보글보글 하고 난다. 얼기설기 짜 놓은 방직물 같다. 손으로 뜬다면 잡힐까.
->
-> <점심 한강>
+이미 지나간 것들 중 놓친 것들이 너무 많은 것 같다. 자연의 아름다움조차 가슴 깊이 느껴 본 적이 없었다. 물 흐르는 것을 보고 있으면 생각이 없어져서 좋았지, 물결을 통해 생각을 하지는 않았으니까. 이제는 생각하기 위해 산책을 나간다. 하루는 길가에 핀 꽃이 꼭 폭죽 같아서 축하할 일이 없는데도 축하받는 기분이었고, 둥둥 떠다니는 오리를 보면서 물 밑으로는 발길질 열심일지, 나처럼 버둥대고 있을지를 궁금해했다. 한강을 바라보기만 하며 앉아 있는 노인은 무슨 생각을 할지 궁금해했다. 물 바로 앞에서 소주를 마시던 노인은 다음날에도 같은 자리에 있을지 궁금해했다. 자리에 없기를 바랐다.
 
 ### 책
 
@@ -45,7 +39,7 @@ draft: false
 
 #### 이런 얘기는 좀 어지러운가
 
-문학동네시인선 중 꽤 마음에 들어서 구입. 나는 시집의 목차에 특히 눈이 꽂히는데, '우리는 시끄럽고 앞뒤가 안 맞지'라는 데에 완전히 꽂혀 버려서 그것 하나로 구입했다. 시집은 꼭 그렇다. 다른 것 다 그저 그래도 뭐 하나에 꽂히면 일단 구매해 두고 싶다. 상황 따라 잘 보이는 시도 다 다를 테니.
+문학동네시인선 중 꽤 마음에 들어서 구입. 나는 시집의 목차에 특히 눈이 꽂히는데, '우리는 시끄럽고 앞뒤가 안 맞지'라는 데에 완전히 꽂혀 버려서 그것 하나로 구입했다. 시집은 꼭 다른 것 다 그저 그래도 뭐 하나에 꽂히면 일단 구매해 두고 싶다. 상황 따라 잘 보이는 시도 다 다를 테니.
 
 #### 나는 내가 싫고 좋고 이상하고
 
