--- a/content/blog/thoughts/2021-may.md
+++ b/content/blog/thoughts/2021-may.md
@@ -54,7 +54,7 @@ draft: false
 
 회사 이사 후로는 아무래도 미용실을 논현까지 가기가 힘들어서 일 년을 또 방황했는데, 역시 펌은 그 쌤 아니면 못 맡기겠는 것이다. 복슬복슬한 시절의 내 사진을 보면 그렇게 그리운 것이다. 인턴 시절을 그 머리로 보냈는데 그때 열심히 행복하던 기억이 너무 좋았던 것도 한몫했고. 그런데 일 년을 다른 미용실 다니다가 다시 돌아갔을 때 쌤은 어떤 기분이실지가 좀 걱정됐다. 예약을 일주일을 고민했다. 고민 끝에 연락 드려서 예약을 잡고, 머리를 볶았다.
 
-<img src="./images/perm.jpeg" width="30%">
+![perm](./images/perm.png)
 
 못 본 새에 쌤은 1인샵을 새로 내셨다. 단정한 쌤 분위기와 잘 어울리는 공간이었다. 구석구석 신경 쓴 인테리어가 예뻤다. 굴곡진 거울도 예뻤고, 바닥에 세워진 액자도 예뻤고, 예쁘게 난 창문에 옷걸이가 비치는 것도 예뻤다. 쌤은 내 얼굴 보자마자 어른스러워졌다 그랬다. `저 완전 앤데요 ㅠㅠ` 하면서 그동안 어떻게 지냈는지 이야기했다. 내 이야기보다는 쌤 이야기를 듣고 싶었는데 쌤은 내 이야기 끌어 내는 데 선수였고, 나는 그간의 회사 생활에 대해 이야기했다. 갑자기 왜 열심히 살아야 되는지 모르겠어서 힘들었다 그랬더니 쌤도 그랬다 했다. 닮은 점이 많았다. 쉬어 본 적 없이 인턴 생활부터 회사 생활을 시작했던 나, 미용 고등학교를 나와서 바로 취직하고 쉴 새 없이 일만 했던 쌤. 지쳐서 길게 쉬려 하셨는데, 한 달을 쉰다 하면 '한 달 뒤면 내 휴식이 끝나는구나'에 집중하게 되어 제대로 된 휴식을 즐길 수 없었다 그랬다. 그래서 퇴사하고 제주도로 가려 하셨는데, 계획 중에 갑자기 쉬어서 뭐 하겠냐는 생각이 드셨고(?!). 그렇게 퇴사 후 1인샵을 차리게 되셨다고. 못 쉬어서 힘들지 않으실까 싶었지만 혼자 일하는 게 행복하다 하셨다. 온전한 나와 손님의 공간이라 행복하시다고.
 
@@ -68,7 +68,7 @@ draft: false
 
 나의 26번째 생일!
 
-![birthday](./images/birthday.jpg)
+![birthday](./images/birthday.png)
 
 유독 `백 퍼 송채윤이 좋아할 선물임` 하면서 선물해 준 친구들이 많아서 좋았던 생일. 내 취향을 정확히 간파하는 친구들이 있다는 것만큼 행복한 일이 또 있을까! 어버이날 편지 답장도 받았다. 유독 날 울리는 편지가 많았던 생일이기도 했던. 특별한 파티 없이도 당일에 생일을 꼭 챙겨 주는 유리와 유진이가 있어서 행복했다.
 
@@ -78,7 +78,7 @@ draft: false
 
 내 인생 첫 자전거 성공. 나 자전거 성공시키겠다고 지나쳐 간 선생님 친구들이 세 명이나 있었는데 몇 시간을 들여도 죄다 실패하더니만 얼렁뚱땅 삼십 분 만에 성공했다. 성공의 비결을 묻는다면… `상체에 힘 빼기`라 할 수 있을 것 같고요? 이때 나 자신에게 드럽게 자신 없었던 때였는데 이거 하나 성공하고 나니까 뭐라도 된 기분이더라. 다 할 수 있을 것 같은 기분! 그래서 앞으로 자신 없을 때에는 작은 성취 하나를 이뤄 보는 게 좋겠다는 생각이 들었다. 서너 번 더 공터 돌면 이제 나도 “자전거 도로”에서 자전거 타 볼 수 있지 않을까. 두근두근. (아직은 나 때문에 길 막힐까 봐 무서워서 운동장만 돌고 있음)
 
-<video src="./video/bicycle.mp4">
+<div style="padding:75% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/567855556?badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen style="position:absolute;top:0;left:0;width:100%;height:100%;" title="bicycle"></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
 
 ### 알디프 티 바
 
