--- a/content/blog/thoughts/2021-may.md
+++ b/content/blog/thoughts/2021-may.md
@@ -16,11 +16,9 @@ draft: false
 
 ### 어버이날
 
-엄마에게 썼던 어버이날 편지. (
+엄마에게 썼던 어버이날 편지. [(링크)](https://brunch.co.kr/@chaeniiz/14)
 
-[링크]: https://brunch.co.kr/@chaeniiz/14
-
-) 올해 어버이날은 이렇게 편지(아 물론 아빠 것도 썼다구요), 각인 펜, 주문 제작 떡케이크로. 떡케이크 픽업 하러 가는 날 처음으로 분당에 가 봤는데 이 동네 분위기가 정말 좋았다. 케이크 픽업 후 집까지 가는 길은 퇴근길 9호선 러쉬 + 바리바리 싸든 짐 때문에 아주 죽음이었지만....... 동네에 대한 기억 자체는 정말 좋았던. 한산한 동네에 햇살까지 받으니 정말 봄인 것 같았다. 우리 가족이 나 말고는 케이크에 욕심들이 없으니 1호로 주문하고 싶었고, 엄마 + 아빠 + 나 + 동생 + 땅콩이까지 모여 있는 그림을 부탁드렸는데, 1호 사이즈로는 모든 인물이 들어가기 힘들 것 같다고 그러셨다. 그래서 엄빠 + 굳이굳이 땅콩이를 엄마 어깨에 올려 달라고 조악한 그림으로 설명하며 요청 드렸는데, 상상했던 것보다 케이크가 너무너무너무너무 귀엽게 나왔다. 픽업 가자마자 사장님께서 내 그림이 너무 귀여웠다고...? 절대 귀여울 리 없는 조악한 그림이었는데요......?
+올해 어버이날은 이렇게 편지(아 물론 아빠 것도 썼다구요), 각인 펜, 주문 제작 떡케이크로. 떡케이크 픽업 하러 가는 날 처음으로 분당에 가 봤는데 이 동네 분위기가 정말 좋았다. 케이크 픽업 후 집까지 가는 길은 퇴근길 9호선 러쉬 + 바리바리 싸든 짐 때문에 아주 죽음이었지만....... 동네에 대한 기억 자체는 정말 좋았던. 한산한 동네에 햇살까지 받으니 정말 봄인 것 같았다. 우리 가족이 나 말고는 케이크에 욕심들이 없으니 1호로 주문하고 싶었고, 엄마 + 아빠 + 나 + 동생 + 땅콩이까지 모여 있는 그림을 부탁드렸는데, 1호 사이즈로는 모든 인물이 들어가기 힘들 것 같다고 그러셨다. 그래서 엄빠 + 굳이굳이 땅콩이를 엄마 어깨에 올려 달라고 조악한 그림으로 설명하며 요청 드렸는데, 상상했던 것보다 케이크가 너무너무너무너무 귀엽게 나왔다. 픽업 가자마자 사장님께서 내 그림이 너무 귀여웠다고...? 절대 귀여울 리 없는 조악한 그림이었는데요......?
 
 ![cake picture](./images/cake_pic.png)
 
