--- a/content/blog/thoughts/2021-jun.md
+++ b/content/blog/thoughts/2021-jun.md
@@ -59,9 +59,11 @@ draft: false
 
 일단 인테리어가 너무 예뻤다. 한국에서 맛보는 외국의 맛? 음식도 깔끔하게 맛있었고, 템페는 내가 생각했던 것보다 특별한 맛이 없었다. 그래도 그래도 굳이 굳이 맛을 표현해 보자면 약간 고소한 맛. 그런데 식감이 얇게 꾸덕하니 은근히 생각나는 맛이었다. 지금은 컬리로 네다섯 팩씩 시켜서 먹고 있다. 소스를 잘 머금다 보니 이런저런 소스들 찍먹 하다 보면 진짜 금방 동난다.
 
+그리고 또 궁금했던 곳, 해방촌 바이두부. 여기도 또 다른 운동 유튜버 통해 알게 된 곳인데, 비건 운동 유튜버가 추천하는 비건 맛집이었다. 단지앙 님인데…… 내가 방문한 날 단지앙 님을 봤다. (!!) 일행 분과 함께 오셨길래 멀리서 속으로만 외쳤다. ‘저 구독자예요….’
+
 ![by_tofu](./images/by_tofu.png)
 
-그리고 또 궁금했던 곳, 해방촌 바이두부. 여기도 또 다른 운동 유튜버 통해 알게 된 곳인데, 비건 운동 유튜버가 추천하는 비건 맛집이었다. 단지앙 님인데…… 내가 방문한 날 단지앙 님을 봤다. (!!) 일행 분과 함께 오셨길래 멀리서 속으로만 외쳤다. ‘저 구독자예요….’두부보울과 주말에만 판매한다는 콜리플라워 튀김을 시켰다. 두부보울은 평소에 자주 해 먹던 에어프라이어에 돌려 먹는 구운 두부 강정과 비슷한 맛이 났는데, 소스가 많이 버무려져 있어서 조금 더 자극적이었다. 콜리플라워 튀김은 야채튀김과 비슷한 맛이었다. 그릇까지도 친환경적으로 코코넛 껍질?로 만들었더라. 신선하고 기분 좋았다.
+두부보울과 주말에만 판매한다는 콜리플라워 튀김을 시켰다. 두부보울은 평소에 자주 해 먹던 에어프라이어에 돌려 먹는 구운 두부 강정과 비슷한 맛이 났는데, 소스가 많이 버무려져 있어서 조금 더 자극적이었다. 콜리플라워 튀김은 야채튀김과 비슷한 맛이었다. 그릇까지도 친환경적으로 코코넛 껍질?로 만들었더라. 신선하고 기분 좋았다.
 
 ![by_tofu](./images/by_tofu2.png)
 
@@ -69,7 +71,7 @@ draft: false
 
 ### 이태원
 
-슈반슈 만난 날. 배 터지고 입 터지게 시끄럽게 놀았다. 얘 때문에 내가 지금도 ‘존웃탱’을 입에 달고 살게 됐다고. 대화 내용들이 비방용이라 (ㅋㅋ) 다 언급할 수는 없지만 다소 재미없던 일상들에 이렇게 재미있는 만남도 진짜 오랜만이었다. 나는 누굴 만나도 그 사람을 배려해야 한다는 강박 아닌 강박이 있어서 만남에 에너지를 많이 쏟는 편인데 이 날은 무슨 일인지 깔깔거리기만 할 수 있었던 만남. 비가 그렇게 쏟아졌는데도.
+슈반슈 만난 날. 배 터지고 입 터지게 시끄럽게 놀았다. 얘 때문에 내가 지금도 ‘존웃탱’을 입에 달고 살게 됐다고. 대화 내용들이 비방용이라 (ㅋㅋ) 다 언급할 수는 없지만 다소 재미없던 일상들에 이렇게 재미있는 만남도 진짜 오랜만이었다. 나는 누굴 만나도 그 사람을 배려해야 한다는 강박 아닌 강박이 있어서 만남에 에너지를 많이 쏟는 편인데 이 날은 무슨 일인지 깔깔거리기만 할 수 있었다. 비가 그렇게 쏟아졌는데도.
 
 ![itw](./images/itw_4.png)
 
@@ -97,7 +99,7 @@ draft: false
 
 ![lp](./images/lp_3.png)
 
-묘하게 중독성 있는 맛. 나중에 또 와서 요거 또 시키고 싶었다. 아란넴은 포트와인 시켜서 나도 한 입 홀짝여 봤는데…… 신세계. 엄청 달았고 아란넴 말로는 되게 빨리 취할 수 있대서 와인 마실 일 생긴다면 요걸 마셔야겠다 다짐!
+묘하게 중독성 있는 맛. 나중에 또 와서 요거 또 시키고 싶었다. 아란넴은 포트와인 시켜서 나도 한 입 홀짝여 봤는데…… 신세계. 엄청 달았고 아란넴 말로는 되게 빨리 취할 수 있대서 와인 마실 일 생긴다면 요걸 마셔야겠다 다짐! (취하고 싶다!)
 
 ### 체리
 
