--- a/content/blog/thoughts/2021-jun.md
+++ b/content/blog/thoughts/2021-jun.md
@@ -49,7 +49,9 @@ draft: false
 
 ![phantom](./images/phantom.png)
 
-크리스틴이 팬텀에게 가면을 벗고 얼굴을 보여 달라 하는 것은 꼭 사랑하는 사람의 치부까지 알고 싶은 마음을 표현하는 것 같았다. 사랑하면 뭐든 알고 싶고 뭐가 됐든 괜찮을 것 같은 마음. 팬텀은 크리스틴이 감당할 수 없을 거라며 몇 번을 거절하지만 결국 사랑한다는 이유로 얼굴을 보여 주고, 크리스틴은 역시나 놀라서 도망간다. 단순한 외모지상주의를 보여 주는 것이 아니라 보여 주고 싶지 않았던 치부를 드러내고 결국 상처받는 과정을 보여 주는 것 같았다. 팬텀이 자신을 보고 도망간 크리스틴을 이해하고 미워하지 않는다 하는 대목에서 마음이 너무 아렸다. 상처받을 대로 상처받은 사람은 왜 이해하고 또 아픔을 감내해야만 하는 걸까 싶어서. 그게 너무 슬퍼서 울었다.마음이 많이 약해져 있을 때 봐서 그랬을 수도 있지만 이 뮤지컬은 나를 많이 울렸다. 그리고 나를 위로했다. 다시 극이 올라오면 꼭 또 보러 가야지.
+크리스틴이 팬텀에게 가면을 벗고 얼굴을 보여 달라 하는 것은 꼭 사랑하는 사람의 치부까지 알고 싶은 마음을 표현하는 것 같았다. 사랑하면 뭐든 알고 싶고 뭐가 됐든 괜찮을 것 같은 마음. 팬텀은 크리스틴이 감당할 수 없을 거라며 몇 번을 거절하지만 결국 사랑한다는 이유로 얼굴을 보여 주고, 크리스틴은 역시나 놀라서 도망간다. 단순한 외모지상주의를 보여 주는 것이 아니라 보여 주고 싶지 않았던 치부를 드러내고 결국 상처받는 과정을 보여 주는 것 같았다. 팬텀이 자신을 보고 도망간 크리스틴을 이해하고 미워하지 않는다 하는 대목에서 마음이 너무 아렸다. 상처받을 대로 상처받은 사람은 왜 이해하고 또 아픔을 감내해야만 하는 걸까 싶어서. 그게 너무 슬퍼서 울었다.
+
+마음이 많이 약해져 있을 때 봐서 그랬을 수도 있지만 이 뮤지컬은 나를 많이 울렸다. 그리고 나를 위로했다. 다시 극이 올라오면 꼭 또 보러 가야지.
 
 ### 채식
 
@@ -57,13 +59,13 @@ draft: false
 
 ![newzealand_story](./images/newzealand_story.png)
 
-일단 인테리어가 너무 예뻤다. 한국에서 맛보는 외국의 맛? 음식도 깔끔하게 맛있었고, 템페는 내가 생각했던 것보다 특별한 맛이 없었다. 그래도 그래도 굳이 굳이 맛을 표현해 보자면 약간 고소한 맛. 그런데 식감이 얇게 꾸덕하니 은근히 생각나는 맛이었다. 지금은 컬리로 네다섯 팩씩 시켜서 먹고 있다. 소스를 잘 머금다 보니 이런저런 소스들 찍먹 하다 보면 진짜 금방 동난다.
+일단 인테리어가 너무 예뻤다. 한국에서 맛보는 외국의 맛? 음식도 깔끔하게 맛있었고, 템페는 내가 생각했던 것보다 특별한 맛이 없었다. 그래도 그래도 굳이 굳이 맛을 표현해 보자면 약간 고소한 맛. 그런데 식감이 얇게 꾸덕하니 은근히 생각나는 맛이었다. 지금은 컬리로 네다섯 팩씩 시켜서 먹고 있다. 완죠니 중독됐다. 지금도 먹고 싶다. 소스를 잘 머금다 보니 이런저런 소스들 찍먹 하다 보면 진짜 금방 동난다. (추천 조합: 비비드키친 저칼로리 칠리 소스/허니머스타드)
 
 그리고 또 궁금했던 곳, 해방촌 바이두부. 여기도 또 다른 운동 유튜버 통해 알게 된 곳인데, 비건 운동 유튜버가 추천하는 비건 맛집이었다. 단지앙 님인데…… 내가 방문한 날 단지앙 님을 봤다. (!!) 일행 분과 함께 오셨길래 멀리서 속으로만 외쳤다. ‘저 구독자예요….’
 
 ![by_tofu](./images/by_tofu.png)
 
-두부보울과 주말에만 판매한다는 콜리플라워 튀김을 시켰다. 두부보울은 평소에 자주 해 먹던 에어프라이어에 돌려 먹는 구운 두부 강정과 비슷한 맛이 났는데, 소스가 많이 버무려져 있어서 조금 더 자극적이었다. 콜리플라워 튀김은 야채튀김과 비슷한 맛이었다. 그릇까지도 친환경적으로 코코넛 껍질?로 만들었더라. 신선하고 기분 좋았다.
+두부보울과 주말에만 판매한다는 콜리플라워 튀김을 시켰다. 두부보울은 평소에 자주 해 먹던 에어프라이어에 돌려 먹는 구운 두부 강정과 비슷한 맛이 났는데, 소스가 많이 버무려져 있어서 조금 더 자극적이었다. 콜리플라워 튀김은 야채튀김과 비슷한 맛이었다. 그릇까지도 친환경적으로 코코넛 껍질로 만들었다더라. 발상이 신선했고 같이 환경을 보호하게 된 것 같아 기분 좋았다.
 
 ![by_tofu](./images/by_tofu2.png)
 
@@ -91,7 +93,7 @@ draft: false
 
 ![lp](./images/lp_1.png)
 
-무엇을 기념하여 어느 카페를 갔다가 (^^) 아라넌니가 가 보고 싶다던 LP바 간 날. 신청 곡이 나올 때마다 그 곡의 LP를 이렇게 전시! 인상깊은 인테리어였다. 사실 더 인상깊었던 건 화장실인데, 신청 곡에 제한을 두는 이유와 함께 다른 장르를 신청하고 싶을 때 가 볼 만한 다른 바들을 적어 두셨더라. 예민한 다정함이 느껴졌다고 해야 하나? 그런 느낌.
+무엇을 기념하여 어느 카페를 갔다가 (^^) 아라넌니가 가 보고 싶다던 LP바 간 날. 신청 곡이 나올 때마다 그 곡의 LP를 이렇게 전시한다. (나는 뒤에 있는 마이클 부블레의 Sway를 신청했다지) 인상깊은 인테리어였다. 사실 더 인상깊었던 건 화장실인데, 신청 곡에 제한을 두는 이유와 함께 다른 장르를 신청하고 싶을 때 가 볼 만한 다른 바들을 적어 두셨더라. 예민한 다정함이 느껴졌다고 해야 하나? 그런 느낌.
 
 ![lp](./images/lp_2.png)
 
